# coworker_bingo

./: .gitignore  .pre-commit-config.yaml  .style.yapf  LICENSE  README.md  mypy.ini  pyproject.toml  requirements.txt  ruff.toml  setup.py  tox.ini
.github/workflows/: common_workflow.yml  main.yml  master_workflow.yml
coworker_bingo/: __init__.py  bingo_sheet_generator.py  input_files_reader.py  sheet_drawer.py
coworker_bingo/scripts/: config.py  generate_sheets.py
input_files/: generic_facts.txt  participant_names.txt  specific_facts.csv
presentation_slides/: Co-Worker Bingo Instructions.odp  Co-Worker Bingo Instructions.pptx
scripts/: config.py  generate_sheets.py
tests/: smoke_test.py
