[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coworker_bingo"
version = "1.0.0"
description = "Co-worker bingo sheet generator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "df2img",
    "pandas",
    "progress"
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "ruff"
]

[project.urls]
Repository = "https://https://github.com/tengfoonglam/coworker_bingo"

[tool.setuptools]
packages = ["coworker_bingo"] # Or a list of package names
py-modules = ["coworker_bingo"] # Or a list of module names

# Ruff formatting/linting
[tool.ruff]
line-length = 79
indent-width = 4

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
select = ["E4", "E5", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
